<resources>
    <string name="app_name">Swapify</string>
    <string name="title_home">My files</string>
    <string name="title_recived">Recived</string>
    <string name="title_send">Send</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>